--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@mui/material": "^5.14.3",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/x-date-pickers": "^6.11.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "dayjs": "^1.11.9",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.10",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
@@ -49,5 +53,5 @@
   },
   "resolutions": {
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
-}
+  }
 }
