--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.2.0",
+    "@mui/lab": "^5.0.0-alpha.139",
     "@mui/material": "^5.14.3",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/x-date-pickers": "^6.11.0",
@@ -22,10 +24,12 @@
     "react-error-boundary": "^4.0.10",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.45.4",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "redux-persist": "^6.0.0",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.4.8",
