--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.45.4",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.11",
     "yup": "^1.2.0"
