--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.2.0",
+    "@mui/icons-material": "^5.14.3",
     "@mui/lab": "^5.0.0-alpha.139",
-    "@mui/material": "^5.14.3",
+    "@mui/material": "^5.14.5",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/x-date-pickers": "^6.11.0",
     "@reduxjs/toolkit": "^1.9.5",
@@ -25,6 +24,7 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.45.4",
+    "react-i18next": "^13.1.2",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
